# emotion-recap

./: .gitmodules  README.md  TODO.md  fix_fps.py  pyproject.toml  run_ensemble.sh  smart_ring.py
arousal_detection/: analyse_results.py  arousal_detector.py  collect_training_data.py  detect_from_session.py  extract_clips.py  fix_fps.py  gsr_features.py  gsr_realtime_plot.py  hrv_features.py  plot_session.py  retrain_baseline.py  session_scoring.py  train_ensemble.py  train_model.py  tune_threshold.py  tune_threshold_ensemble.py
clip_viewer/: app.py
clip_viewer/static/: app.js  style.css
clip_viewer/templates/: index.html
sensing/: arousal_detector.py  collect_training_data.py  detect_from_session.py  extract_clips.py  gsr_feature_extraction.py  gsr_features.py  gsr_realtime_plot.py  hrv_features.py  plot_sesion.py  plot_session.py  retrain_baseline.py  session_scoring.py  test_gsr_senor.py  train_model.py  tune_threshold.py
sensing/test/: record_audio.py  record_video.py  test_polar_h7.py
vlm/: reanalyse.py  smol.py
