[project]
name = "emotion-recap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=17.0.1",
    "bleak>=0.22.3",
    "colmi-r02-client",
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "num2words>=0.5.14",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "pyaudio>=0.2.14",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "seeed-grove-py",
    "tabulate>=0.10.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]

[tool.uv.workspace]
members = [
]

[tool.uv.sources]
seeed-grove-py = { path = "external/grove" }
colmi-r02-client = { git = "https://github.com/tahnok/colmi_r02_client" }
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.49.0-SmolVLM-2" }
